# fluxfox

./: .clippy.toml  .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  README.md  ff_egui_app.js  index.html  rustfmt.toml
.github/workflows/: deploy_ff_egui_app.yml  deploy_ff_egui_app_cf.yml
crates/ff_egui_app/: .gitignore  CHANGELOG.md  Cargo.toml  Trunk.toml  build.bat  index.html  rust-toolchain  serve.bat
crates/ff_egui_app/assets/: coi-serviceworker.js  load_worker.js  sw.js  worker.js
crates/ff_egui_app/src/: app.rs  lib.rs  lock.rs  main.rs  time.rs  ui.rs  viz.rs
crates/ff_egui_app/src/native/: app.rs  mod.rs  util.rs  worker.rs
crates/ff_egui_app/src/wasm/: app.rs  mod.rs  util.rs  worker.rs
crates/ff_egui_app/src/widgets/: filename.rs  filesystem.rs  hello.rs  mod.rs  texture.rs  viz.rs
crates/ff_egui_app/src/windows/: disk_visualization.rs  element_map.rs  file_viewer.rs  mod.rs  new_viz.rs  sector_viewer.rs  source_map.rs  track_timing_viewer.rs  track_viewer.rs  viz.rs
crates/ff_egui_lib/: Cargo.toml  rustfmt.toml
crates/ff_egui_lib/src/: lib.rs  tracking_lock.rs
crates/ff_egui_lib/src/character_encoding/: cp_437.rs  iec8559_1.rs  mod.rs
crates/ff_egui_lib/src/controls/: boot_sector.rs  canvas.rs  data_table.rs  data_visualizer.rs  dir_tree.rs  disk_info.rs  disk_visualization.rs  error_banner.rs  file_list.rs  filesystem.rs  header_group.rs  mod.rs  path_selection.rs  sector_status.rs  source_map.rs  tab_group.rs  track_list.rs  track_timing_chart.rs  vector_disk_visualizer.rs
crates/ff_egui_lib/src/encoding/: cp_437.rs  iec8559_1.rs  mod.rs
crates/ff_egui_lib/src/range_check/: mod.rs
crates/ff_egui_lib/src/traits/: mod.rs  render_callback.rs
crates/ff_egui_lib/src/visualization/: mod.rs  palette.rs  viz_elements.rs
crates/ff_egui_lib/src/widgets/: boot_sector.rs  canvas.rs  chs.rs  data_table.rs  data_visualizer.rs  dir_tree.rs  disk_info.rs  disk_visualizer.rs  error_banner.rs  file_list.rs  filesystem.rs  header_group.rs  mod.rs  path_selection.rs  pill.rs  sector_status.rs  source_map.rs  tab_group.rs  texture.rs  track_list.rs  track_timing_chart.rs
crates/ffedit/: Cargo.toml  README.md
crates/ffedit/src/: app.rs  app_context.rs  app_events.rs  data_block.rs  disk_selection.rs  history.rs  layout.rs  logger.rs  main.rs  modal.rs  util.rs  widget.rs
crates/ffedit/src/cmd_interpreter/: c.rs  h.rs  list.rs  mod.rs  open.rs  s.rs  up.rs
crates/ffedit/src/components/: data_block.rs  history.rs  metadata_header.rs  mod.rs
crates/fftool/: CHANGELOG.md  Cargo.toml  README.md
crates/fftool/src/: args.rs  main.rs
crates/fftool/src/convert/: mod.rs
crates/fftool/src/create/: mod.rs
crates/fftool/src/dump/: args.rs  mod.rs
crates/fftool/src/find/: args.rs  mod.rs
crates/fftool/src/info/: args.rs  mod.rs
crates/fluxfox_cli/: Cargo.toml
crates/fluxfox_cli/src/: args.rs  main.rs  prompt.rs
crates/fluxfox_svg/: .gitignore  Cargo.toml  README.md
crates/fluxfox_svg/src/: document.rs  lib.rs  prelude.rs  render_display_list.rs  render_elements.rs  render_overlays.rs  renderer.rs  styles.rs
crates/fluxfox_svg/src/overlays/: mod.rs
crates/fluxfox_tiny_skia/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/fluxfox_tiny_skia/src/: lib.rs  prelude.rs  render_display_list.rs  render_elements.rs  renderer.rs  styles.rs
crates/pbm2track/: Cargo.toml  LICENSE  README.md
crates/pbm2track/src/: main.rs  prng.rs  sampler.rs
crates/png2disk/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/png2disk/src/: args.rs  disk.rs  main.rs
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/fat/: Cargo.toml  README.md
examples/fat/src/: main.rs
examples/imgconvert/: cargo.toml
examples/imgdump/: Cargo.toml
examples/imginfo/: Cargo.toml  LICENSE
examples/imginfo/src/: main.rs
examples/imgviz/: Cargo.toml  README.md  style.toml
examples/imgviz/src/: args.rs  config.rs  legend.rs  main.rs  palette.rs  render.rs  render_bitmap.rs  render_display_list.rs  render_svg.rs  style.rs  text.rs
examples/imgviz/src/svg_helpers/: mod.rs
examples/serde_demo/: Cargo.toml
examples/serde_demo/src/: main.rs
resources/: bootsector.asm  demo.imz
scripts/: README.md  kryoflux_delete_odd_tracks.py  make_sector_test_img.py  st_sizes.py
src/: chs.rs  copy_protection.rs  detect.rs  disk_lock.rs  diskimage.rs  image_builder.rs  image_loader.rs  image_writer.rs  io.rs  lib.rs  platform.rs  prelude.rs  random.rs  range_check.rs  sector_view.rs  source_map.rs  standard_format.rs  trackdata.rs  tree_map.rs  util.rs
src/bit_ring/: mod.rs
src/bitstream/: fm.rs  mfm.rs  mod.rs  raw.rs
src/bitstream_codec/: fm.rs  gcr.rs  mfm.rs  mod.rs
src/boot_sector/: bootsector.rs  bpb.rs  mod.rs
src/codec/: mod.rs
src/containers/: archive.rs  gzip.rs  mod.rs  zip.rs
src/disk_schema/: mod.rs
src/ffi/: mod.rs
src/file_parsers/: 86f.rs  f86.rs  hfe.rs  imd.rs  kryoflux.rs  mfi.rs  mfm.rs  mod.rs  moof.rs  pfi.rs  pri.rs  psi.rs  raw.rs  scp.rs  tc.rs  td0.rs
src/file_system/: date_time.rs  file_tree.rs  mod.rs  native.rs
src/flux/: flux_revolution.rs  histogram.rs  mod.rs  pll.rs
src/fluxstream/: flux_stream.rs  mod.rs  pll.rs
src/parsers/: imd.rs  mfm.rs  mod.rs  pri.rs  psi.rs  raw.rs  scp.rs  td0.rs
src/scripting/: mod.rs
src/structure_parsers/: mod.rs  system34.rs
src/track/: bitstream.rs  fluxstream.rs  metasector.rs  mod.rs  sector_iterator.rs
src/track_schema/: amiga.rs  dispatch.rs  mod.rs  system34.rs
src/types/: chs.rs  enums.rs  flags.rs  mod.rs  rpm.rs  sector_layout.rs  standard_format.rs  structs.rs
src/visualization/: data_segmenter.rs  disk_to_pixmap.rs  display_list.rs  elements_to_sectors.rs  mod.rs  pixmap_to_disk.rs  prelude.rs  rasterize_disk.rs  tiny_skia_util.rs  types.rs  vectorize_disk.rs
tests/: adf.rs  f86.rs  hfe.rs  image_builder.rs  imd.rs  img.rs  kryoflux.rs  mfi.rs  mfm.rs  pfi.rs  pri.rs  prolok.rs  psi.rs  scp.rs  tc.rs  td0.rs  write_bitstream.rs
tests/common/: convert_exact.rs  invertibility.rs  mod.rs
tests/images/: Transylvania.imd
(+96 files in other folders)
