[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Daniel Balsom"]
keywords = ["emulation", "ibm", "floppy", "disk"]
repository = "https://github.com/dbalsom/fluxfox"
license = "MIT"

[package]
name = "fluxfox"
description = "A library crate for working with floppy disk images for the IBM PC and compatibles."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bit-vec = "0.8"
bitflags = "2.6.0"
binrw = "0.14"
thiserror = "2.0"
num-traits = "0.2.14"
num-derive = "0.4"
logger = "0.4"
env_logger = "0.11"
regex = "1.10"
log = "0.4.22"
rand = "0.8.5"
sha1_smol = "1.0.1"

# Dependencies for optional features

tiny-skia = { version = "0.11", optional = true }

flate2 = { version = "1.0", optional = true }
histogram = "0.11"
plotly = { version = "0.10", optional = true }
serde = { version = "1.0", optional = true }
typetag = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

fluxfox_fat = { git = "https://github.com/dbalsom/fluxfox_fat.git", package = "fatfs", branch = "bpb_fix", default-features = false, features = ["std", "alloc", "log_level_debug"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = { version = "2.1", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time", "zstd"], optional = true }
tokio = { version = "1", optional = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
zip = { version = "2.1", default-features = false, features = ["deflate", "deflate64", "lzma", "time"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
sha1 = "0.10.6"
hex = "0.4"    # or the latest version

[workspace]
members = [
    "examples/async",
    "examples/serde_demo",
    "examples/imginfo",
    "examples/imgdump",
    "examples/imgviz",
    "crates/png2disk",
    "crates/ffedit",
    "crates/fftool",
    "crates/ff_egui_app", 
    "crates/ff_egui_lib"
]

[features]
default = ["viz", "zip", "mfi", "fat"]
wasm = ["async", "wasm-bindgen", "wasm-bindgen-futures"]
serde = ["dep:serde", "dep:typetag", "bit-vec/serde_std", "bitflags/serde"]
tokio-async = ["async", "tokio"]
async = []
viz = ["dep:tiny-skia"]
zip = ["dep:zip"]
mfi = ["dep:flate2"]
fat = ["dep:fluxfox_fat"]
plot = ["dep:plotly"]

[lints.clippy]
too-many-arguments = "allow"
identity_op = "allow"

[profile.release]
lto = "thin"

[profile.release.package.ff_egui_app]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
