[package]
name = "fluxfox_egui"
description = "A library crate providing egui widgets that interface with fluxfox."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
fluxfox = { path = "../..", default-features = false }
egui = {  version = "0.29", optional = true }
egui_v28 = { package = "egui", version = "0.28", optional = true } # Lower version for MartyPC support
egui_extras = { version = "0.29", optional = true }
egui_extras_v28 = { package = "egui_extras", version = "0.28", optional = true } # Lower version for MartyPC support
serde = { version = "1.0", optional = true }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }

[features]
default = ["egui", "egui_extras", "serde"]
egui = ["dep:egui"]
egui_extras = ["dep:egui_extras"]
egui28 = ["dep:egui_v28", "dep:egui_extras_v28", "serde"]