[package]
name = "fluxfox_egui"
version = "0.2.0"
description = "A library crate providing egui widgets that interface with fluxfox."
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
fluxfox = { path = "../..", default-features = false, features = ["fat", "viz"] }
egui = {  version = "0.30.0", optional = true }
egui_extras = { version = "0.30.0", optional = true }
serde = { version = "1.0", optional = true }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }
# this should track with the version used by egui_extrass to avoid duplicates
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = ["egui", "egui_extras", "serde"]
serde = ["dep:serde", "egui/serde"]
egui = ["dep:egui"]
egui_extras = ["dep:egui_extras"]