[package]
name = "fluxfox_egui"
version = "0.3.3"
description = "A library crate providing egui widgets that interface with fluxfox."
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
fluxfox = { path = "../..", default-features = false, features = ["fat", "viz"] }
fluxfox_tiny_skia = { path = "../fluxfox_tiny_skia" }
# fluxfox_svg provides SVG rendering for fluxfox visualization functions. Enable via the 'svg' feature.
fluxfox_svg = { path = "../fluxfox_svg", optional = true }

egui = {  version = "0.30.0", default-features = false, optional = true }
egui_extras = { version = "0.30.0", default-features = false, optional = true }
egui_plot = { version = "0.30.0", optional = true }
serde = { version = "1.0", optional = true }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }
# this should track with the version used by egui_extrass to avoid duplicates
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# We are limited to the wasm-bindgen binary version bundled with trunk
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-rayon = "1.3"
rayon = "1.8"

[features]
default = ["egui", "egui_extras", "egui_plot", "serde"]
svg = ["dep:fluxfox_svg"]
serde = ["dep:serde", "egui/serde"]
egui = ["dep:egui"]
egui_extras = ["dep:egui_extras"]
egui_plot = ["dep:egui_plot"]