[package]
name = "ffedit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true

[dependencies]
fluxfox = { path = "../.." }
crossterm = "0.28.1"
ratatui = "0.28.1"
tui-popup = "0.5.0"

crossbeam-channel = "0.5.13"
bpaf = { version = "0.9", features = ["autocomplete"] }

