[package]
name = "ffedit"
description = "An IBM PC floppy disk editor powered by fluxfox and ratatui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
license = "MIT"

[dependencies]
fluxfox = { path = "../.." }
crossterm = "0.28.1"
ratatui = "0.28.1"
tui-popup = "0.5.0"
log = "0.4.22"
once_cell = "1.8.0"
anyhow = "1.0"
crossbeam-channel = "0.5.15"
bpaf = { version = "0.9", features = ["autocomplete"] }
indexmap = "2.6.0"