[package]
name = "fftool"
description = "An IBM PC floppy disk command line tool powered by fluxfox."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
license = "MIT"

[dependencies]
fluxfox = { path = "../.." }
log = "0.4.22"
once_cell = "1.8.0"
anyhow = "1.0"
crossbeam-channel = "0.5.13"
bpaf = { version = "0.9", features = ["autocomplete"] }
indexmap = "2.6.0"
env_logger = "0.11.5"

[dev-dependencies]
tempfile = "3.14"