[package]
name = "png2disk"
version = "0.1.0"
authors = ["Daniel Balsom"]
edition = "2021"
publish = true
description = "A novel utility to write PNG images onto PC floppy disk images."
readme = "README.md"

[dependencies]
bpaf = { version = "0.9", features = ["autocomplete"] }
fluxfox = { path = "../.." }
logger = "0.4"
env_logger = "0.11"
log = "0.4.22"
anyhow = "1.0"
tiny-skia = { version = "0.11", features = ["png"] }

[features]
default = ["viz"]
viz = ["fluxfox/viz"]