[package]
name = "png2disk"
version = "0.2.0"
authors = ["Daniel Balsom"]
edition = "2021"
publish = true
description = "A novel utility to write PNG images onto PC floppy disk images."
readme = "README.md"

[dependencies]
bpaf = { version = "0.9", features = ["autocomplete"] }
fluxfox = { path = "../..", features = ["viz", "tiny_skia"] }
logger = "0.4"
env_logger = "0.11"
log = "0.4.22"
anyhow = "1.0"

[features]
default = ["viz"]
viz = ["fluxfox/viz"]

[package.metadata.docs.rs]
build = false
