[package]
name = "fat_example"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bpaf = { version = "0.9", features = ["autocomplete"] }
fluxfox = { path = "../..", default-features = false, features = ["zip", "mfi", "fat"] }
logger = "0.4"
env_logger = "0.11"
log = "0.4.22"

[features]

