[package]
name = "imginfo"
version = "0.1.0"
authors = ["Daniel Balsom"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["autocomplete"] }
fluxfox = { path = "../.." }
logger = "0.4"
env_logger = "0.11"
log = "0.4.22"
