[package]
name = "imgviz"
version = "0.1.0"
authors = ["Daniel Balsom"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["autocomplete"] }
fluxfox = { path = "../.." }
logger = "0.4"
env_logger = "0.11"
log = "0.4.22"
image = "0.25"
fast_image_resize = "4.2.1"
tiny-skia = "0.11"
crossbeam = "0.8.4"
anyhow = "1.0"

[features]
default = ["viz"]
viz = ["fluxfox/viz"]